--- a/templates/item/class-sheet.html
+++ b/templates/item/class-sheet.html
@@ -23,7 +23,7 @@
     <section class="sheet-body">
         {{!-- Abilities Tab --}}
         <div class="tab" data-group="primary" data-tab="abilities">
-            {{editor content=data.abilities target="data.abilities" button=true owner=owner editable=editable}}               
+            {{editor content=data.abilities target="data.abilities" button=true owner=owner editable=true}}               
         </div>
 
         {{!-- Details Tab --}}
