--- a/templates/item/feat-sheet.html
+++ b/templates/item/feat-sheet.html
@@ -32,13 +32,13 @@
             {{!-- Roll Label --}}
             <div class="form-group">
                 <label>{{ localize "MB.RollLabel" }}:</label>
-                <input type="text" name="data.rollLabel" value="{{data.rollLabel}}" placeholder="" data-dtype="String" />
+                <input type="text" name="data.rollLabel" value="{{data.data.rollLabel}}" placeholder="" data-dtype="String" />
             </div>
 
             {{!-- Roll Formula --}}
             <div class="form-group">
                 <label>{{ localize "MB.RollFormula" }}:</label>
-                <input type="text" name="data.rollFormula" value="{{data.rollFormula}}" placeholder="" data-dtype="String" />
+                <input type="text" name="data.rollFormula" value="{{data.data.rollFormula}}" placeholder="" data-dtype="String" />
             </div>
             
         </div>        
