--- a/templates/item/weapon-sheet.html
+++ b/templates/item/weapon-sheet.html
@@ -31,26 +31,26 @@
             {{!-- Price --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemPrice" }}:</label>
-                <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
+                <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
 
             {{!-- Carry weight --}}
             <div class="form-group">
                 <label>{{ localize "MB.CarryWeight" }}:</label>
-                <input type="text" name="data.carryWeight" value="{{data.carryWeight}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.carryWeight" value="{{data.data.carryWeight}}" placeholder="1" data-dtype="Number" />
             </div> 
 
             {{!-- Container space --}}
             <div class="form-group">
                 <label>{{ localize "MB.ContainerSpace" }}:</label>
-                <input type="text" name="data.containerSpace" value="{{data.containerSpace}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.containerSpace" value="{{data.data.containerSpace}}" placeholder="1" data-dtype="Number" />
             </div> 
             
             {{!-- Weapon Type --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemWeaponType" }}:</label>
                 <select name="data.weaponType">
-                    {{#select data.weaponType}}
+                    {{#select data.data.weaponType}}
                     {{#each config.weaponTypes as |name type|}}
                     <option value="{{type}}">{{localize name}}</option>
                     {{/each}}
@@ -68,7 +68,7 @@
             <div class="form-group">
                 <label>{{ localize "MB.ItemHanded" }}:</label>
                 <select name="data.handed">
-                    {{#select data.handed}}
+                    {{#select data.data.handed}}
                     {{#each config.handed as |name value|}}
                     <option value="{{value}}">{{localize name}}</option>
                     {{/each}}
