Compatibility with Foundry 0.8.6. (#113)
* First attempt at getting char sheet data working with 0.8.3.

* Deal with API change: Roll.results array is now Roll.result string.

* Fix editor target.

* Make creature sheet html work.

* More sheet JS and html fixes.

* Fix attack roll.

* Fix defend roll.

* Fix wield roll.

* Remove console.log.

* Fix container sheet.

* Fix for RollTable draw() result now using an inner data field.

* Use actor.items.get(id) instead of actor.getOwnedItem(id), to get rid of warnings.

* Explicitly delete embedded items before updating character with scvm data/items.

* Set version and core version for a beta1 release.

* Fix actor.scvmify() to use scvmdialog.

* Make only-one-class for compendium drag-drop to character work.

* More cleanup.

* Remove now-inaccurate comment.

* Set 0.8.4 as compatible version.

* Fix draw results and sheets, due to .data.

* Mark compat with 0.8.6.

--- a/templates/item/feat-sheet.html
+++ b/templates/item/feat-sheet.html
@@ -23,7 +23,7 @@
     <section class="sheet-body">
         {{!-- Description Tab --}}
         <div class="tab" data-group="primary" data-tab="description">
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            {{editor content=data.description target="data.description" button=true owner=owner editable=true}}
         </div>
 
         {{!-- Details Tab --}}
@@ -32,13 +32,13 @@
             {{!-- Roll Label --}}
             <div class="form-group">
                 <label>{{ localize "MB.RollLabel" }}:</label>
-                <input type="text" name="data.rollLabel" value="{{data.rollLabel}}" placeholder="" data-dtype="String" />
+                <input type="text" name="data.rollLabel" value="{{data.data.rollLabel}}" placeholder="" data-dtype="String" />
             </div>
 
             {{!-- Roll Formula --}}
             <div class="form-group">
                 <label>{{ localize "MB.RollFormula" }}:</label>
-                <input type="text" name="data.rollFormula" value="{{data.rollFormula}}" placeholder="" data-dtype="String" />
+                <input type="text" name="data.rollFormula" value="{{data.data.rollFormula}}" placeholder="" data-dtype="String" />
             </div>
             
         </div>        
