--- a/templates/item/armor-sheet.html
+++ b/templates/item/armor-sheet.html
@@ -23,7 +23,7 @@
     <section class="sheet-body">
         {{!-- Description Tab --}}
         <div class="tab" data-group="primary" data-tab="description">
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            {{editor content=data.data.description target="data.description" button=true owner=owner editable=true}}
         </div>
 
         {{!-- Details Tab --}}
@@ -31,26 +31,26 @@
             {{!-- Price --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemPrice" }}:</label>
-                <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
+                <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
 
             {{!-- Carry weight --}}
             <div class="form-group">
                 <label>{{ localize "MB.CarryWeight" }}:</label>
-                <input type="text" name="data.carryWeight" value="{{data.carryWeight}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.carryWeight" value="{{data.data.carryWeight}}" placeholder="1" data-dtype="Number" />
             </div> 
 
             {{!-- Container space --}}
             <div class="form-group">
                 <label>{{ localize "MB.ContainerSpace" }}:</label>
-                <input type="text" name="data.containerSpace" value="{{data.containerSpace}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.containerSpace" value="{{data.data.containerSpace}}" placeholder="1" data-dtype="Number" />
             </div> 
 
             {{!-- Armor Current Tier --}}
             <div class="form-group">
                 <label>{{ localize "MB.ArmorCurrentTier" }}:</label>
                 <select name="data.tier.value" data-dtype="Number">
-                    {{#select data.tier.value}}
+                    {{#select data.data.tier.value}}
                         {{#each config.armorTiers as |tierObj tierNum|}}
                             <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
                         {{/each}}
@@ -62,7 +62,7 @@
             <div class="form-group">
                 <label>{{ localize "MB.ArmorMaxTier" }}:</label>
                 <select name="data.tier.max" data-dtype="Number">
-                    {{#select data.tier.max}}
+                    {{#select data.data.tier.max}}
                         {{#each config.armorTiers as |tierObj tierNum|}}
                             <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
                         {{/each}}
