--- a/templates/item/container-sheet.html
+++ b/templates/item/container-sheet.html
@@ -23,7 +23,7 @@
     <section class="sheet-body">
         {{!-- Description Tab --}}
         <div class="tab" data-group="primary" data-tab="description">
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            {{editor content=data.description target="data.description" button=true owner=owner editable=true}}
         </div>
 
         {{!-- Details Tab --}}
@@ -32,19 +32,19 @@
             {{!-- Price --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemPrice" }}:</label>
-                <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
+                <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
 
             {{!-- Carry weight --}}
             <div class="form-group">
                 <label>{{ localize "MB.CarryWeight" }}:</label>
-                <input type="text" name="data.carryWeight" value="{{data.carryWeight}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.carryWeight" value="{{data.data.carryWeight}}" placeholder="1" data-dtype="Number" />
             </div> 
                 
             {{!-- Capacity --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemCapacity" }}:</label>
-                <input type="text" name="data.capacity" value="{{data.capacity}}" placeholder="1d4" data-dtype="Number" />
+                <input type="text" name="data.capacity" value="{{data.data.capacity}}" placeholder="1d4" data-dtype="Number" />
             </div> 
 
         </div>
