--- a/templates/item/misc-sheet.html
+++ b/templates/item/misc-sheet.html
@@ -23,7 +23,7 @@
     <section class="sheet-body">
         {{!-- Description Tab --}}
         <div class="tab" data-group="primary" data-tab="description">
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            {{editor content=data.description target="data.description" button=true owner=owner editable=true}}
         </div>
 
         {{!-- Details Tab --}}
@@ -32,25 +32,25 @@
             {{!-- Price --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemPrice" }}:</label>
-                <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
+                <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
             </div>
 
             {{!-- Carry weight --}}
             <div class="form-group">
                 <label>{{ localize "MB.CarryWeight" }}:</label>
-                <input type="text" name="data.carryWeight" value="{{data.carryWeight}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.carryWeight" value="{{data.data.carryWeight}}" placeholder="1" data-dtype="Number" />
             </div> 
 
             {{!-- Container space --}}
             <div class="form-group">
                 <label>{{ localize "MB.ContainerSpace" }}:</label>
-                <input type="text" name="data.containerSpace" value="{{data.containerSpace}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.containerSpace" value="{{data.data.containerSpace}}" placeholder="1" data-dtype="Number" />
             </div> 
 
             {{!-- Quantity --}}
             <div class="form-group">
                 <label>{{ localize "MB.Quantity" }}:</label>
-                <input type="text" name="data.quantity" value="{{data.quantity}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.quantity" value="{{data.data.quantity}}" placeholder="1" data-dtype="Number" />
             </div> 
             
         </div>
