Fix weapon damage die field on sheet.

--- a/templates/item/weapon-sheet.html
+++ b/templates/item/weapon-sheet.html
@@ -61,7 +61,7 @@
             {{!-- Damage Die --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemDamageDie" }}:</label>
-                <input type="text" name="data.damageDie" value="{{data.damageDie}}" placeholder="1d4" data-dtype="String" />
+                <input type="text" name="data.damageDie" value="{{data.data.damageDie}}" placeholder="1d4" data-dtype="String" />
             </div>
 
             {{!-- Handed --}}
