Fix carryWeight field on default item sheet.

--- a/templates/item/item-sheet.html
+++ b/templates/item/item-sheet.html
@@ -33,7 +33,7 @@
             {{!-- Carry weight --}}
             <div class="form-group">
                 <label>{{ localize "MB.CarryWeight" }}:</label>
-                <input type="text" name="data.carryWeight" value="{{.data.carryWeight}}" placeholder="1" data-dtype="Number" />
+                <input type="text" name="data.carryWeight" value="{{data.data.carryWeight}}" placeholder="1" data-dtype="Number" />
             </div> 
 
             {{!-- Container space --}}
