--- a/templates/chat/individual-initiative-roll-card.html
+++ b/templates/chat/individual-initiative-roll-card.html
@@ -1,10 +1,10 @@
 <form class="roll-card morale-roll-card">
     <div class="card-title">
-        {{localize 'MB.IndividualInitiative'}}
+        {{localize 'MB.Initiative'}}
     </div>
     <div class="initiative-roll">
         <div class="roll-title">
-            <span>{{localize 'MB.IndividualInitiative'}}: {{initiativeRoll.formula}}</span>
+            <span>{{localize 'MB.Initiative'}}: {{initiativeRoll.formula}}</span>
         </div>
         <div class="roll-result">
             <span>{{xtotal initiativeRoll}}</span>
