Support additional scroll type for tablets of ochre obscurity.

--- a/templates/item/scroll-sheet.html
+++ b/templates/item/scroll-sheet.html
@@ -8,7 +8,7 @@
                 <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}"/>
             </h1>
             <div class="item-subtitle">
-                <h4 class="item-type">{{item.type}}</h4>
+                <h4 class="item-type">{{ data.data.localizedScrollType }}</h4>
             </div>
         </div>
     </header>
