Fix equip-a-weapon text logic.

--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -126,7 +126,7 @@
                     </li>
                     {{/each}}
                 </ol>
-                {{#if data.equippedWeapons.length}}
+                {{#if data.data.equippedWeapons.length}}
                     <div class="rule-text attack-rule">
                         {{localize 'MB.AttackCritText'}}
                         {{localize 'MB.AttackFumbleText'}}
